# prelovio

./: .dockerignore  .env.example  .gitignore  DATABASE_SETUP.md  DEPLOYMENT.md  Dockerfile  ITEM_STATUS_MANAGEMENT.md  Makefile  README.md  STATUS_MANAGEMENT_IMPLEMENTATION.md  TERRAFORM_DEPLOYMENT.md  TESTING.md  cloudbuild.yaml  pyproject.toml  pytest.ini  test_centering.py  test_runner.py
.cursor/rules/: global.mdc
.github/workflows/: deploy.yml
prelovium/: .env.example  __init__.py
prelovium/utils/: __init__.py  database.py  gcs_storage.py  image_processing.py  metadata.py
prelovium/webapp/: __init__.py  app.py
prelovium/webapp/examples/jacket/ad/: metadata.json
prelovium/webapp/examples/shirt/ad/: metadata.json
prelovium/webapp/examples/shoes/ad/: metadata.json
prelovium/webapp/examples/suit/ad/: metadata.json
prelovium/webapp/static/css/: style.css
prelovium/webapp/static/js/: main.js
prelovium/webapp/templates/: base.html  history.html  index.html
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_image_processing.py  test_integration.py  test_metadata.py  test_webapp.py
