[tool.poetry]
name = "prelovium"
version = "0.1.0"
description = "A web application for image processing and analysis"
authors = ["Valentin Buchner"]
packages = [
    { include = "prelovium" }
]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"
torchvision = "^0.18.0"
google-cloud-aiplatform = "^1.51.0"
flask = "^3.1.1"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
google-cloud-storage = "^2.10.0"
python-dotenv = "^1.0.0"
transformers = "4.41.2"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
